source/puppet/5.4/man/module.md
---
layout: default
built_from_commit: edd3c04ba4892bd59ab1cac02f44d74c9d432ca8
title: 'Man Page: puppet module'
canonical: "/puppet/latest/man/module.html"
---

<div class='mp'>
<h2 id="NAME">NAME</h2>
<p class="man-name">
  <code>puppet-module</code> - <span class="man-whatis">Creates, installs and searches for modules on the Puppet Forge.</span>
</p>

<h2 id="SYNOPSIS">SYNOPSIS</h2>

<p>puppet module <var>action</var> [--environment production ] [--modulepath  ]</p>

<h2 id="DESCRIPTION">DESCRIPTION</h2>

<p>This subcommand can find, install, and manage modules from the Puppet Forge,
a repository of user-contributed Puppet code. It can also generate empty
modules, and prepare locally developed modules for release on the Forge.</p>

<h2 id="OPTIONS">OPTIONS</h2>

<p>Note that any setting that's valid in the configuration
file is also a valid long argument, although it may or may not be
relevant to the present action. For example, <code>server</code> and <code>run_mode</code> are valid
settings, so you can specify <code>--server &lt;servername></code>, or
<code>--run_mode &lt;runmode></code> as an argument.</p>

<p>See the configuration file documentation at
<a href="https://docs.puppetlabs.com/puppet/latest/reference/configuration.html" data-bare-link="true">https://docs.puppetlabs.com/puppet/latest/reference/configuration.html</a> for the
full list of acceptable parameters. A commented list of all
configuration options can also be generated by running puppet with
<code>--genconfig</code>.</p>

<dl>
<dt>--render-as FORMAT</dt><dd>The format in which to render output. The most common formats are <code>json</code>,
<code>s</code> (string), <code>yaml</code>, and <code>console</code>, but other options such as <code>dot</code> are
sometimes available.</dd>
<dt>--verbose</dt><dd>Whether to log verbosely.</dd>
<dt class="flush">--debug</dt><dd>Whether to log debug information.</dd>
<dt>--environment production</dt><dd><p>The environment in which Puppet is running. For clients,
such as <code>puppet agent</code>, this determines the environment itself, which
Puppet uses to find modules and much more. For servers, such as <code>puppet master</code>,
this provides the default environment for nodes that Puppet knows nothing about.</p>

<p>When defining an environment in the <code>[agent]</code> section, this refers to the
environment that the agent requests from the master. The environment doesn't
have to exist on the local filesystem because the agent fetches it from the
master. This definition is used when running <code>puppet agent</code>.</p>

<p>When defined in the <code>[user]</code> section, the environment refers to the path that
Puppet uses to search for code and modules related to its execution. This
requires the environment to exist locally on the filesystem where puppet is
being executed. Puppet subcommands, including <code>puppet module</code> and
<code>puppet apply</code>, use this definition.</p>

<p>Given that the context and effects vary depending on the
<a href="https://puppet.com/docs/puppet/latest/config_file_main.html#config-sections">config section</a>
in which the <code>environment</code> setting is defined, do not set it globally.</p></dd>
<dt>--modulepath </dt><dd><p>The search path for modules, as a list of directories separated by the system
path separator character. (The POSIX path separator is ':', and the
Windows path separator is ';'.)</p>

<p>Setting a global value for <code>modulepath</code> in puppet.conf is not allowed
(but it can be overridden from the commandline). Please use
directory environments instead. If you need to use something other than the
default modulepath of <code>&lt;ACTIVE ENVIRONMENT'S MODULES DIR>:$basemodulepath</code>,
you can set <code>modulepath</code> in environment.conf. For more info, see
<a href="https://docs.puppet.com/puppet/latest/reference/environments.html" data-bare-link="true">https://docs.puppet.com/puppet/latest/reference/environments.html</a></p></dd>
</dl>


<h2 id="ACTIONS">ACTIONS</h2>

<dl>
<dt><code>build</code> - Build a module release package.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet module build [<var>path</var>]</p>

<p><code>DESCRIPTION</code></p>

<p>Prepares a local module for release on the Puppet Forge by building a
ready-to-upload archive file.
Note: Module build uses MD5 checksums, which are prohibited on FIPS enabled systems.</p>

<p>This action uses the metadata.json file in the module directory to set metadata
used by the Forge. See <a href="https://docs.puppetlabs.com/puppet/latest/reference/modules_publishing.html" data-bare-link="true">https://docs.puppetlabs.com/puppet/latest/reference/modules_publishing.html</a> for more
about writing metadata.json files.</p>

<p>After being built, the release archive file can be found in the module's
<code>pkg</code> directory.</p>

<p><code>RETURNS</code></p>

<p>Pathname object representing the path to the release archive.</p></dd>
<dt><code>changes</code> - Show modified files of an installed module.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet module changes <var>path</var></p>

<p><code>DESCRIPTION</code></p>

<p>Shows any files in a module that have been modified since it was
installed. This action compares the files on disk to the md5 checksums
included in the module's checksums.json or, if that is missing, in
metadata.json.</p>

<p><code>RETURNS</code></p>

<p>Array of strings representing paths of modified files.</p></dd>
<dt><code>generate</code> - Generate boilerplate for a new module.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet module generate [--skip-interview] <var>name</var></p>

<p><code>DESCRIPTION</code></p>

<p>Generates boilerplate for a new module by creating the directory
structure and files recommended for the Puppet community's best practices.</p>

<p>A module may need additional directories beyond this boilerplate
if it provides plugins, files, or templates.</p>

<p><code>OPTIONS</code>
<var>--skip-interview</var> -
Do not attempt to perform a metadata interview.  Primarily useful for automatic
execution of <code>puppet module generate</code>.</p>

<p><code>RETURNS</code></p>

<p>Array of Pathname objects representing paths of generated files.</p></dd>
<dt><code>install</code> - Install a module from the Puppet Forge or a release archive.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet module install [--force | -f]
[--target-dir DIR | -i DIR]
[--ignore-dependencies]
[--version VER | -v VER]
[--strict-semver]
<var>name</var></p>

<p><code>DESCRIPTION</code></p>

<p>Installs a module from the Puppet Forge or from a release archive file.
Note: Module install uses MD5 checksums, which are prohibited on FIPS enabled systems.</p>

<p>The specified module will be installed into the directory
specified with the <code>--target-dir</code> option, which defaults to the first
directory in the modulepath.</p>

<p><code>OPTIONS</code>
<var>--force</var> | <var>-f</var> -
Force overwrite of existing module, if any.
Implies --ignore-dependencies.</p>

<p><var>--ignore-dependencies</var> -
Do not attempt to install dependencies. Implied by --force.</p>

<p><var>--strict-semver</var> -
Whether version ranges should exclude pre-release versions</p>

<p><var>--target-dir DIR</var> | <var>-i DIR</var> -
The directory into which modules are installed; defaults to the first
directory in the modulepath.</p>

<p>Specifying this option will change the installation directory, and
will use the existing modulepath when checking for dependencies. If
you wish to check a different set of directories for dependencies, you
must also use the <code>--environment</code> or <code>--modulepath</code> options.</p>

<p><var>--version VER</var> | <var>-v VER</var> -
Module version to install; can be an exact version or a requirement string,
eg '>= 1.0.3'. Defaults to latest version.</p>

<p><code>RETURNS</code></p>

<p>Pathname object representing the path to the installed module.</p></dd>
<dt><code>list</code> - List installed modules</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet module list [--tree] [--strict-semver]</p>

<p><code>DESCRIPTION</code></p>

<p>Lists the installed puppet modules. By default, this action scans the
modulepath from puppet.conf's <code>[main]</code> block; use the --modulepath
option to change which directories are scanned.</p>

<p>The output of this action includes information from the module's
metadata, including version numbers and unmet module dependencies.</p>

<p><code>OPTIONS</code>
<var>--strict-semver</var> -
Whether version ranges should exclude pre-release versions</p>

<p><var>--tree</var> -
Whether to show dependencies as a tree view</p>

<p><code>RETURNS</code></p>

<p>hash of paths to module objects</p></dd>
<dt><code>search</code> - Search the Puppet Forge for a module.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet module search <var>search_term</var></p>

<p><code>DESCRIPTION</code></p>

<p>Searches a repository for modules whose names, descriptions, or keywords
match the provided search term.</p>

<p><code>RETURNS</code></p>

<p>Array of module metadata hashes</p></dd>
<dt><code>uninstall</code> - Uninstall a puppet module.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet module uninstall [--force | -f]
[--ignore-changes | -c]
[--version=]
[--strict-semver]
<var>name</var></p>

<p><code>DESCRIPTION</code></p>

<p>Uninstalls a puppet module from the modulepath (or a specific
target directory).
Note: Module uninstall uses MD5 checksums, which are prohibited on FIPS enabled systems.</p>

<p><code>OPTIONS</code>
<var>--force</var> | <var>-f</var> -
Force the uninstall of an installed module even if there are local
changes or the possibility of causing broken dependencies.</p>

<p><var>--ignore-changes</var> | <var>-c</var> -
Uninstall an installed module even if there are local changes to it.  (Implied by --force.)</p>

<p><var>--strict-semver</var> -
Whether version ranges should exclude pre-release versions</p>

<p><var>--version=</var> -
The version of the module to uninstall. When using this option, a module
matching the specified version must be installed or else an error is raised.</p>

<p><code>RETURNS</code></p>

<p>Hash of module objects representing uninstalled modules and related errors.</p></dd>
<dt><code>upgrade</code> - Upgrade a puppet module.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet module upgrade [--force | -f]
[--ignore-dependencies]
[--ignore-changes | -c]
[--version=]
[--strict-semver]
<var>name</var></p>

<p><code>DESCRIPTION</code></p>

<p>Upgrades a puppet module.
Note: Module upgrade uses MD5 checksums, which are prohibited on FIPS enabled systems.</p>

<p><code>OPTIONS</code>
<var>--force</var> | <var>-f</var> -
Force the upgrade of an installed module even if there are local
changes or the possibility of causing broken dependencies.
Implies --ignore-dependencies.</p>

<p><var>--ignore-changes</var> | <var>-c</var> -
Upgrade an installed module even if there are local changes to it.  (Implied by --force.)</p>

<p><var>--ignore-dependencies</var> -
Do not attempt to install dependencies. Implied by --force.</p>

<p><var>--strict-semver</var> -
Whether version ranges should exclude pre-release versions</p>

<p><var>--version=</var> -
The version of the module to upgrade to.</p>

<p><code>RETURNS</code></p>

<p>Hash</p></dd>
</dl>


<h2 id="EXAMPLES">EXAMPLES</h2>

<p><code>build</code></p>

<p>Build a module release:</p>

<p>$ puppet module build puppetlabs-apache
notice: Building /Users/kelseyhightower/puppetlabs-apache for release
Module built: /Users/kelseyhightower/puppetlabs-apache/pkg/puppetlabs-apache-0.0.1.tar.gz</p>

<p>Build the module in the current working directory:</p>

<p>$ cd /Users/kelseyhightower/puppetlabs-apache
$ puppet module build
notice: Building /Users/kelseyhightower/puppetlabs-apache for release
Module built: /Users/kelseyhightower/puppetlabs-apache/pkg/puppetlabs-apache-0.0.1.tar.gz</p>

<p><code>changes</code></p>

<p>Show modified files of an installed module:</p>

<p>$ puppet module changes /etc/puppetlabs/code/modules/vcsrepo/
warning: 1 files modified
lib/puppet/provider/vcsrepo.rb</p>

<p><code>generate</code></p>

<p>Generate a new module in the current directory:</p>

<p>$ puppet module generate puppetlabs-ssh
We need to create a metadata.json file for this module.  Please answer the
following questions; if the question is not applicable to this module, feel free
to leave it blank.</p>

<p>Puppet uses Semantic Versioning (semver.org) to version modules.
What version is this module?  [0.1.0]
--></p>

<p>Who wrote this module?  [puppetlabs]
--></p>

<p>What license does this module code fall under?  [Apache-2.0]
--></p>

<p>How would you describe this module in a single sentence?
--></p>

<p>Where is this module's source code repository?
--></p>

<p>Where can others go to learn more about this module?
--></p>

<p>Where can others go to file issues about this module?
--></p>

<hr />

<p>{
  "name": "puppetlabs-ssh",
  "version": "0.1.0",
  "author": "puppetlabs",
  "summary": null,
  "license": "Apache-2.0",
  "source": "",
  "project_page": null,
  "issues_url": null,
  "dependencies": [
    {
      "name": "puppetlabs-stdlib",
      "version_requirement": ">= 1.0.0"
    }
  ]</p>

<h2 id="-">}</h2>

<p>About to generate this metadata; continue? [n/Y]
--></p>

<p>Notice: Generating module at /Users/username/Projects/puppet/puppetlabs-ssh...
Notice: Populating ERB templates...
Finished; module generated in puppetlabs-ssh.
puppetlabs-ssh/manifests
puppetlabs-ssh/manifests/init.pp
puppetlabs-ssh/metadata.json
puppetlabs-ssh/README.md
puppetlabs-ssh/spec
puppetlabs-ssh/spec/spec_helper.rb
puppetlabs-ssh/tests
puppetlabs-ssh/tests/init.pp</p>

<p><code>install</code></p>

<p>Install a module:</p>

<p>$ puppet module install puppetlabs-vcsrepo
Preparing to install into /etc/puppetlabs/code/modules ...
Downloading from https://forgeapi.puppet.com ...
Installing -- do not interrupt ...
/etc/puppetlabs/code/modules
└── puppetlabs-vcsrepo (v0.0.4)</p>

<p>Install a module to a specific environment:</p>

<p>$ puppet module install puppetlabs-vcsrepo --environment development
Preparing to install into /etc/puppetlabs/code/environments/development/modules ...
Downloading from https://forgeapi.puppet.com ...
Installing -- do not interrupt ...
/etc/puppetlabs/code/environments/development/modules
└── puppetlabs-vcsrepo (v0.0.4)</p>

<p>Install a specific module version:</p>

<p>$ puppet module install puppetlabs-vcsrepo -v 0.0.4
Preparing to install into /etc/puppetlabs/modules ...
Downloading from https://forgeapi.puppet.com ...
Installing -- do not interrupt ...
/etc/puppetlabs/code/modules
└── puppetlabs-vcsrepo (v0.0.4)</p>

<p>Install a module into a specific directory:</p>

<p>$ puppet module install puppetlabs-vcsrepo --target-dir=/opt/puppetlabs/puppet/modules
Preparing to install into /opt/puppetlabs/puppet/modules ...
Downloading from https://forgeapi.puppet.com ...
Installing -- do not interrupt ...
/opt/puppetlabs/puppet/modules
└── puppetlabs-vcsrepo (v0.0.4)</p>

<p>Install a module into a specific directory and check for dependencies in other directories:</p>

<p>$ puppet module install puppetlabs-vcsrepo --target-dir=/opt/puppetlabs/puppet/modules --modulepath /etc/puppetlabs/code/modules
Preparing to install into /opt/puppetlabs/puppet/modules ...
Downloading from https://forgeapi.puppet.com ...
Installing -- do not interrupt ...
/opt/puppetlabs/puppet/modules
└── puppetlabs-vcsrepo (v0.0.4)</p>

<p>Install a module from a release archive:</p>

<p>$ puppet module install puppetlabs-vcsrepo-0.0.4.tar.gz
Preparing to install into /etc/puppetlabs/code/modules ...
Downloading from https://forgeapi.puppet.com ...
Installing -- do not interrupt ...
/etc/puppetlabs/code/modules
└── puppetlabs-vcsrepo (v0.0.4)</p>

<p>Install a module from a release archive and ignore dependencies:</p>

<p>$ puppet module install puppetlabs-vcsrepo-0.0.4.tar.gz --ignore-dependencies
Preparing to install into /etc/puppetlabs/code/modules ...
Installing -- do not interrupt ...
/etc/puppetlabs/code/modules
└── puppetlabs-vcsrepo (v0.0.4)</p>

<p><code>list</code></p>

<p>List installed modules:</p>

<p>$ puppet module list
  /etc/puppetlabs/code/modules
  ├── bodepd-create_resources (v0.0.1)
  ├── puppetlabs-bacula (v0.0.2)
  ├── puppetlabs-mysql (v0.0.1)
  ├── puppetlabs-sqlite (v0.0.1)
  └── puppetlabs-stdlib (v2.2.1)
  /opt/puppetlabs/puppet/modules (no modules installed)</p>

<p>List installed modules in a tree view:</p>

<p>$ puppet module list --tree
  /etc/puppetlabs/code/modules
  └─┬ puppetlabs-bacula (v0.0.2)
    ├── puppetlabs-stdlib (v2.2.1)
    ├─┬ puppetlabs-mysql (v0.0.1)
    │ └── bodepd-create_resources (v0.0.1)
    └── puppetlabs-sqlite (v0.0.1)
  /opt/puppetlabs/puppet/modules (no modules installed)</p>

<p>List installed modules from a specified environment:</p>

<p>$ puppet module list --environment production
  /etc/puppetlabs/code/modules
  ├── bodepd-create_resources (v0.0.1)
  ├── puppetlabs-bacula (v0.0.2)
  ├── puppetlabs-mysql (v0.0.1)
  ├── puppetlabs-sqlite (v0.0.1)
  └── puppetlabs-stdlib (v2.2.1)
  /opt/puppetlabs/puppet/modules (no modules installed)</p>

<p>List installed modules from a specified modulepath:</p>

<p>$ puppet module list --modulepath /opt/puppetlabs/puppet/modules
  /opt/puppetlabs/puppet/modules (no modules installed)</p>

<p><code>search</code></p>

<p>Search the Puppet Forge for a module:</p>

<p>$ puppet module search puppetlabs
NAME          DESCRIPTION                          AUTHOR             KEYWORDS
bacula        This is a generic Apache module      @puppetlabs        backups</p>

<p><code>uninstall</code></p>

<p>Uninstall a module:</p>

<p>$ puppet module uninstall puppetlabs-ssh
Removed /etc/puppetlabs/code/modules/ssh (v1.0.0)</p>

<p>Uninstall a module from a specific directory:</p>

<p>$ puppet module uninstall puppetlabs-ssh --modulepath /opt/puppetlabs/puppet/modules
Removed /opt/puppetlabs/puppet/modules/ssh (v1.0.0)</p>

<p>Uninstall a module from a specific environment:</p>

<p>$ puppet module uninstall puppetlabs-ssh --environment development
Removed /etc/puppetlabs/code/environments/development/modules/ssh (v1.0.0)</p>

<p>Uninstall a specific version of a module:</p>

<p>$ puppet module uninstall puppetlabs-ssh --version 2.0.0
Removed /etc/puppetlabs/code/modules/ssh (v2.0.0)</p>

<p><code>upgrade</code></p>

<p>upgrade an installed module to the latest version</p>

<p>$ puppet module upgrade puppetlabs-apache
/etc/puppetlabs/puppet/modules
└── puppetlabs-apache (v1.0.0 -> v2.4.0)</p>

<p>upgrade an installed module to a specific version</p>

<p>$ puppet module upgrade puppetlabs-apache --version 2.1.0
/etc/puppetlabs/puppet/modules
└── puppetlabs-apache (v1.0.0 -> v2.1.0)</p>

<p>upgrade an installed module for a specific environment</p>

<p>$ puppet module upgrade puppetlabs-apache --environment test
/etc/puppetlabs/code/environments/test/modules
└── puppetlabs-apache (v1.0.0 -> v2.4.0)</p>

<h2 id="COPYRIGHT-AND-LICENSE">COPYRIGHT AND LICENSE</h2>

<p>Copyright 2012 by Puppet Inc.
Apache 2 license; see COPYING</p>

</div>
